--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
     "@chakra-ui/react": "^1.8.3",
     "@emotion/react": "11",
     "@emotion/styled": "11",
-    "axios": "^0.25.0",
     "framer-motion": "6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.26.1",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
-    "shopify-buy": "^2.14.0",
-    "sweetalert": "^2.1.2"
+    "shopify-buy": "^2.14.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
